[package]
authors = ["Eden Wang <edwardwang33773@gmail.com>"]
description = "A simple OS kernel implemented in rust, which has referenced https://os.phil-opp.com/"
name = "ember_os"
version = "0.1.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/DrEden33773/ember_os"
homepage = "https://github.com/DrEden33773/ember_os"
license = "MIT/Apache-2.0"
keywords = ["unix-like", "os", "kernel", "rust", "embedded"]
categories = ["embedded", "os", "no-std", "memory-management"]

[features]
default = [
    "use_FixedSizeBlockAllocator",
    # "use_LockedHeapAllocator",
    # "use_LinkedListAllocator",
    # "use_BumpAllocator",
    "use_EfficientExecutor",
    "use_SelfDefinedLRUCache",
]
# allocator features
use_BumpAllocator = []
use_LinkedListAllocator = []
use_FixedSizeBlockAllocator = []
use_LockedHeapAllocator = []
# executor features
use_SimpleExecutor = []
use_EfficientExecutor = []
# collection features
## lru_cache features
use_SelfDefinedLRUCache = []
# usr def features
usr_def_addr_translate = []

[dependencies]
hashbrown = "0.15.2"
lru = "0.12.5"
cfg-if = "1.0.0"
bootloader = { version = "0.9.28", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.15.2"
uart_16550 = "0.3.2"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
async-recursion = "1.1.1"
linked_list_allocator = "0.10.5"
lock_api = "0.4.12"

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # (in seconds)

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "should_panic"
harness = false
